# mcabber-modules

./: .hgignore  Makefile.am  autogen.sh  configure.ac
clock/: Makefile.am  clock.c
comment/: Makefile.am  comment.c
extsay/: Makefile.am  extsay.c
extsay-ng/: Makefile.am  README  extsay.c  extsay.sh  extsayng.c
extsay-old/: Makefile.am  extsay_old.c
ignore_auth/: Makefile.am  ignore_auth.c  ignore_auth.rc
info_msgcount/: Makefile.am  info_msgcount.c
killpresence/: Makefile.am  killpresence.c
lastmsg/: Makefile.am  lastmsg.c
show_mdr/: Makefile.am  show_mdr.c
xttitle/: Makefile.am  xttitle.c
